changes in docker (nginx restart, yaml library)

--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -15,6 +15,7 @@ services:
   nginx:
     build:
       dockerfile: Dockerfile
+    restart: unless-stopped
     volumes:
       - ./docker/certs/local:/etc/nginx/certs
     ports:
