--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -6,8 +6,9 @@ WORKDIR /var/www/chess-empire/api
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-RUN apt-get update \
+RUN apt-get update -y \
     && apt-get install -y --no-install-recommends \
+        libyaml-dev \
         libssh-dev \
         libcurl4-openssl-dev \
         libxslt-dev \
@@ -16,3 +17,7 @@ RUN apt-get update \
 
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
+
+RUN pecl install yaml \
+    && echo "extension=yaml.so" > /usr/local/etc/php/conf.d/ext-yaml.ini \
+    && docker-php-ext-enable yaml
