--- a/api/composer.json
+++ b/api/composer.json
@@ -5,7 +5,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "ChessFramework\\": "src/Core/"
+            "Handy\\": "handy/"
         }
     },
     "require": {}
