--- a/api/composer.json
+++ b/api/composer.json
@@ -1,12 +1,15 @@
 {
-    "name": "vendor/api",
-    "description": "api for chess-empire",
-    "type": "project",
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/",
-            "Handy\\": "handy/"
-        }
-    },
-    "require": {}
+  "name": "vendor/api",
+  "description": "api for chess-empire",
+  "type": "project",
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/",
+      "Handy\\": "handy/"
+    }
+  },
+  "require": {
+    "vlucas/phpdotenv": "^5.6",
+    "ext-pdo": "*"
+  }
 }
