route family attribute, not found controller, fixes and improvements

--- a/api/handy/Config/Defaults/config.yaml
+++ b/api/handy/Config/Defaults/config.yaml
@@ -1,4 +1,8 @@
-controllers: []
+controllers:
+  NotFound:
+    controller: Handy\Controller\NotFoundController
+    method: index
+
 
 supported_content_types: ["application/json"]
 
