--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.5",
+    "compose-function": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
