--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.5",
+    "axios": "^1.6.8",
     "compose-function": "^3.0.3",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
