--- a/docker/nginx/conf.d/nginx_local.conf
+++ b/docker/nginx/conf.d/nginx_local.conf
@@ -1,8 +1,22 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
     listen 80;
     server_name ${NGINX_HOST};
 
-    return 301 https://${NGINX_HOST};
+    location /ws {
+        proxy_pass http://api:9999;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
+
+    location / {
+        return 301 https://${NGINX_HOST}$request_uri;
+    }
 }
 
 server {
