--- a/api/composer.json
+++ b/api/composer.json
@@ -10,6 +10,7 @@
   },
   "require": {
     "vlucas/phpdotenv": "^5.6",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "rbdwllr/reallysimplejwt": "^5.0"
   }
 }
