casting results to entities in execute method

--- a/api/handy/Config/Defaults/namespaces.yaml
+++ b/api/handy/Config/Defaults/namespaces.yaml
@@ -2,3 +2,7 @@ namespaces:
   App\Controller:
     path: "src/Controller/"
     type: "controller"
+
+  App\Entity:
+    path: "src/Entity/"
+    type: "entity"
