game board, basic client game logic and validation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.5",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "compose-function": "^3.0.3",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
