nginx wss config, socket redux middleware, basic socket server and working auth scenario

--- a/api/.env
+++ b/api/.env
@@ -2,3 +2,6 @@ DB_MS=mysql8
 DB_URL=mysql:host=172.25.0.5;dbname=chessempire
 DB_USER=chessempire-user
 DB_PASSWORD=1234
+
+SOCKET_IP=172.25.0.3
+SOCKET_PORT=9999
