--- a/docker/nginx/conf.d/nginx_local.conf
+++ b/docker/nginx/conf.d/nginx_local.conf
@@ -7,16 +7,7 @@ server {
     listen 80;
     server_name ${NGINX_HOST};
 
-    location /ws {
-        proxy_pass http://api:9999;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-    }
-
-    location / {
-        return 301 https://${NGINX_HOST}$request_uri;
-    }
+    return 301 https://${NGINX_HOST}$request_uri;
 }
 
 server {
@@ -27,6 +18,13 @@ server {
     ssl_certificate_key /etc/nginx/certs/${NGINX_CERT_KEY};
 
     root ${API_DIRECTORY}/public;
+
+    location /ws-server {
+        proxy_pass http://api:9999;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
 
     location / {
         proxy_pass http://frontend:3000;
