--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,12 @@
     "classnames": "^2.5.1",
     "compose-function": "^3.0.3",
     "formik": "^2.4.6",
+    "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sass": "^1.75.0"
   },
