--- a/api/config/config.yaml
+++ b/api/config/config.yaml
@@ -1,3 +1,3 @@
 global_path_prefix: "/api"
 
-security_provider: App\Security\SecurityProvider
+security_provider: Handy\Security\JWTSecurityProvider
