--- a/docker/nginx/conf.d/nginx_local.conf
+++ b/docker/nginx/conf.d/nginx_local.conf
@@ -26,6 +26,17 @@ server {
         proxy_set_header Connection $connection_upgrade;
     }
 
+    location /api {
+        proxy_pass http://api:5000;
+        try_files $uri /index.php$is_args$args;
+        root ${API_DIRECTORY}/public;
+    }
+
+    location /img {
+        alias ${API_DIRECTORY}/public/img;
+        add_header Cache-Control "private, must-revalidate, max-age=3153600";
+    }
+
     location / {
         proxy_pass http://frontend:3000;
         root ${FRONTEND_DIRECTORY}/public;
@@ -37,18 +48,12 @@ server {
         add_header Cache-Control "private, must-revalidate, max-age=3153600";
     }
 
-    location ~ ^/(/|static/|images/|img/|javascript/|js/|css/|dist/|media/|locales/|logo192.png|robots.txt|favicon.ico|manifest.json|.+\.hot-update.js) {
+    location ~ ^/(/|static/|images/|javascript/|js/|css/|dist/|media/|locales/|logo192.png|robots.txt|favicon.ico|manifest.json|.+\.hot-update.js) {
        proxy_pass http://frontend:3000;
        root ${FRONTEND_DIRECTORY}/public;
        access_log off;
        add_header Cache-Control no-cache;
        expires 1s;
-    }
-
-    location /api {
-        proxy_pass http://api:5000;
-        try_files $uri /index.php$is_args$args;
-        root ${API_DIRECTORY}/public;
     }
 
     location ~ \.php$ {
