--- a/api/composer.json
+++ b/api/composer.json
@@ -12,6 +12,7 @@
     "vlucas/phpdotenv": "^5.6",
     "ext-pdo": "*",
     "ext-sockets": "*",
-    "rbdwllr/reallysimplejwt": "^5.0"
+    "rbdwllr/reallysimplejwt": "^5.0",
+    "ext-gd": "*"
   }
 }
