displaying pic in profile page

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL="https://chess-empire.ua/api"
+REACT_APP_BASE_URL="https://chess-empire.ua"
 REACT_APP_SOCKET_HOST="wss://chess-empire.ua/ws-server"
