removed image caching in nginx config

--- a/docker/nginx/conf.d/nginx_local.conf
+++ b/docker/nginx/conf.d/nginx_local.conf
@@ -34,7 +34,7 @@ server {
 
     location /img {
         alias ${API_DIRECTORY}/public/img;
-        add_header Cache-Control "private, must-revalidate, max-age=3153600";
+        add_header Cache-Control "private, must-revalidate, max-age=0";
     }
 
     location / {
@@ -45,7 +45,7 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-        add_header Cache-Control "private, must-revalidate, max-age=3153600";
+        add_header Cache-Control "private, must-revalidate, max-age=0";
     }
 
     location ~ ^/(/|static/|images/|javascript/|js/|css/|dist/|media/|locales/|logo192.png|robots.txt|favicon.ico|manifest.json|.+\.hot-update.js) {
@@ -66,7 +66,7 @@ server {
 
     location ~* .+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|doc|xls|exe|pdf|ppt|txt|js|tar|wav|bmp|rtf|mp4|svg|svgz})$ {
         root ${API_DIRECTORY}/public;
-        add_header Cache-Control "private, max-age=3153600";
+        add_header Cache-Control "private, max-age=0";
     }
 }
 
