--- a/docker/nginx/conf.d/nginx_local.conf
+++ b/docker/nginx/conf.d/nginx_local.conf
@@ -5,14 +5,12 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 80;
-    server_name ${NGINX_HOST};
 
-    return 301 https://${NGINX_HOST}$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 server {
-    listen ${NGINX_PORT} ssl http2;
-    server_name ${NGINX_HOST};
+    listen 443 ssl;
 
     ssl_certificate /etc/nginx/certs/${NGINX_CERT_CRT};
     ssl_certificate_key /etc/nginx/certs/${NGINX_CERT_KEY};
